--- a/directory/src/main/resources/i18n/fr.json
+++ b/directory/src/main/resources/i18n/fr.json
@@ -522,5 +522,6 @@
     "password.recommandations": "Il est recommandé de mélanger chiffres, lettres, majuscules, minuscules et caractères spéciaux.",
     "auth.reset": "Enregistrer",
     "cancel": "Annuler",
-    "auth.activation.confirm.password": "Confirmation du nouveau mot de passe"
+    "auth.activation.confirm.password": "Confirmation du nouveau mot de passe",
+    "directory.metrics": "Métriques"
 }
