--- a/portal/src/main/resources/i18n/fr.json
+++ b/portal/src/main/resources/i18n/fr.json
@@ -12,6 +12,7 @@
   "admin.title": "Console d'administration",
   "admin.welcomeMessage": "Message d'accueil",
   "admin.flashMessage": "Message flash",
+  "admin.timeline.history": "Traitement des signalements",
   "apps.drag": "Déposez ici vos applications préférées.",
   "archive": "Export",
   "archives": "Export",
@@ -249,5 +250,6 @@
   "admin.xiti": "Paramétrage Xiti",
   "calendar": "Agenda",
   "actualites": "Actualités",
-  "rack": "Casier"
+  "rack": "Casier",
+  "timeline": "Fil de nouveautés"
 }
