--- a/timeline/src/main/resources/i18n/fr.json
+++ b/timeline/src/main/resources/i18n/fr.json
@@ -107,5 +107,31 @@
     "missing.color": "Couleur du bandeau non choisie",
     "missing profiles": "Aucun profil(s) attribué(s) pour le message",
     "timeline.flashmsg.duplicate.append.title": " - Copie",
-    "timeline.mark.flashmsg": "Fermer le message"
+    "timeline.mark.flashmsg": "Fermer le message",
+    "timeline.action.discard": "Supprimer de mon fil",
+    "timeline.action.report": "Signaler la notification inappropriée",
+    "timeline.action.reported": "La notification a été signalée",
+    "timeline.action.delete.own": "Supprimer de l'ENT",
+    "panel.my.profile": "Mon profil",
+    "panel.user.history": "Mon historique",
+    "panel.notifications.set": "Mes notifications externes",
+    "admin.timeline.history": "Traitement des signalements",
+    "timeline.admin.tabs.pending": "Signalements à traiter",
+    "timeline.admin.tabs.treated": "Signalements traités",
+    "timeline.admin.reported.on": "Signalé",
+    "timeline.admin.reported.since": "Signalé depuis",
+    "timeline.admin.by": "par",
+    "timeline.admin.treat": "Traiter le signalement",
+    "timeline.admin.action.text": "<p>Voulez-vous supprimer ou conserver la notification ?</p><p>Si vous choisissez de la supprimer, elle sera supprimée du fil de toutes les personnes qui peuvent actuellement la voir.<br/>Il ne sera pas possible de restaurer la notification.</p>",
+    "timeline.admin.keep": "Conserver",
+    "timeline.admin.delete": "Supprimer",
+    "timeline.admin.treated.on": "Traité",
+    "timeline.admin.action.done.KEEP": "Notification conservée",
+    "timeline.admin.action.done.DELETE": "Notification supprimée",
+    "timeline.admin.no.more": "Toutes les notifications ont été chargées",
+    "timeline.notify.report.text": "Une notification a été signalée par",
+    "timeline.notify.report.text2": "Pour traiter le signalement",
+    "timeline.notify.report.text3": "cliquez ici",
+    "timeline": "Fil de nouveautés",
+    "timeline.notify-report": "Signalement d'une notification"
 }
