[evo]#12838 change user label on filters for moods and motto

--- a/timeline/src/main/resources/i18n/fr.json
+++ b/timeline/src/main/resources/i18n/fr.json
@@ -26,7 +26,7 @@
     "timeline.header": "Fil de nouveautés",
     "timeline.nothingnew": "Aucune nouvelle pour le moment !",
     "timeline.title": "Fil de nouveautés",
-    "userbook": "Utilisateurs",
+    "userbook": "Humeurs et devises",
     "workspace": "Espace documentaire",
     "admin.timeline": "Notifications",
     "admin.timeline.header": "Paramétrage des notifications",
