[evo]#12838 style chips filters and set new labels

--- a/timeline/src/main/resources/i18n/fr.json
+++ b/timeline/src/main/resources/i18n/fr.json
@@ -7,7 +7,8 @@
     "comments.show": "Afficher les commentaires",
     "conversation": "Messagerie",
     "filters.all": "Tout",
-    "filters.title": "Filtrer sur",
+    "filters.all.none": "Tout / Aucun",
+    "filters.title": "Filtrer les nouveautés",
     "homeworks": "Cahier de textes",
     "panel.themes": "Mes thèmes",
     "panel.title": "Personnalisation",
