[evo]#12838 add icons, labels and mobile close filter

--- a/timeline/src/main/resources/i18n/fr.json
+++ b/timeline/src/main/resources/i18n/fr.json
@@ -9,6 +9,7 @@
     "filters.all": "Tout",
     "filters.all.none": "Tout / Aucun",
     "filters.title": "Filtrer les nouveautés",
+    "filters.close": "Replier",
     "homeworks": "Cahier de textes",
     "panel.themes": "Mes thèmes",
     "panel.title": "Personnalisation",
