--- a/timeline/src/main/resources/i18n/fr.json
+++ b/timeline/src/main/resources/i18n/fr.json
@@ -8,6 +8,8 @@
     "conversation": "Messagerie",
     "filters.all": "Tout",
     "filters.all.none": "Tout / Aucun",
+    "filters.unselected": "Séléctionnez les nouveautés que vous souhaitez afficher",
+    "filters.unactives": "Inactif(s)",
     "filters.title": "Filtrer les nouveautés",
     "filters.close": "Replier",
     "homeworks": "Cahier de textes",
@@ -27,6 +29,7 @@
     "support": "Aide et support",
     "timeline.header": "Fil de nouveautés",
     "timeline.nothingnew": "Aucune nouvelle pour le moment !",
+    "timeline.empty": "Votre réseau proche n'a partagé aucune information avec vous pour le moment !",
     "timeline.title": "Fil de nouveautés",
     "userbook": "Humeurs et devises",
     "workspace": "Espace documentaire",
