[evo]#12838 end filV2

--- a/timeline/src/main/resources/i18n/fr.json
+++ b/timeline/src/main/resources/i18n/fr.json
@@ -9,6 +9,7 @@
     "filters.all": "Tout",
     "filters.all.none": "Tout / Aucun",
     "filters.unselected": "Séléctionnez les nouveautés que vous souhaitez afficher",
+    "filters.history.unselected": "Séléctionnez les types de notification que vous souhaitez afficher",
     "filters.unactives": "Inactif(s)",
     "filters.title": "Filtrer les nouveautés",
     "filters.close": "Replier",
@@ -30,6 +31,7 @@
     "timeline.header": "Fil de nouveautés",
     "timeline.nothingnew": "Aucune nouvelle pour le moment !",
     "timeline.empty": "Votre réseau proche n'a partagé aucune information avec vous pour le moment !",
+    "timeline.history.empty": "Vous n'avez partagé aucune information pour le moment !",
     "timeline.title": "Fil de nouveautés",
     "userbook": "Humeurs et devises",
     "workspace": "Espace documentaire",
