--- a/admin/src/main/resources/i18n/fr.json
+++ b/admin/src/main/resources/i18n/fr.json
@@ -11,6 +11,9 @@
     "Relative": "Parent",
     "Guest": "Invité",
     "create.user": "Créer un utilisateur",
+    "create.group": "Créer un groupe",
+    "manage.duplicates": "Gérer les doublons",
+    "manage.reports": "Gérer les signalements",
     "filters": "Filtres",
     "sort.alphabetical": "Trier par nom",
     "sort.profile": "Trier par profil",
@@ -19,6 +22,7 @@
     "search": "Rechercher",
     "profiles.multi.combo.title": "Profils (par défaut tous)",
     "code.multi.combo.title": "Activation",
+    "classes.multi.combo.title": "Classes",
     "users.activated": "Utilisateurs activés",
     "users.not.activated": "Utilisateurs non activés",
     "new.user.creation": "Création d'un nouvel utilisateur",
@@ -26,6 +30,7 @@
     "users.details.section.infos": "Connexion et infos ENT",
     "profile": "Profil",
     "activation.code": "Code d'activation",
+    "activation.code.placeholder": "Entrez un code d'activation",
     "login": "Login",
     "id": "Identifiant",
     "source": "Source",
@@ -36,5 +41,43 @@
     "users.details.section.structures": "Etablissement(s)",
     "users.details.section.classes": "Classe(s)",
     "users.details.section.learning.groups": "Groupe(s) d'enseignement",
-    "users.details.section.manual.groups": "Groupe(s) ENT"
+    "users.details.section.manual.groups": "Groupe(s) ENT",
+    "form.error.required": "Champ requis",
+    "form.error.minlength": "{{requiredLength}} caractères minimum",
+    "form.error.maxlength": "{{requiredLength}} caractères maximum",
+    "form.error.pattern": "Saisie invalide",
+    "firstName": "Prénom",
+    "lastName": "Nom",
+    "displayName": "Nom d'affichage",
+    "birthDate": "Date de naissance",
+    "address": "Adresse",
+    "zipCode": "Code postal",
+    "email": "Courriel",
+    "homePhone": "Téléphone",
+    "mobilePhone": "Téléphone portable",
+    "city": "Ville",
+    "toggle.account": "{{ 0 ? Débloquer le compte : Bloquer le compte }}",
+    "delete.account": "Supprimer le compte",
+    "user.blocked": "Utilisateur bloqué",
+    "save.modifications": "Enregistrer les modifications",
+    "send.reset.password": "Envoyer un courriel de réinitialisation de mot de passe",
+    "send.reset.password.placeholder": "Entrer un courriel valide",
+    "administration": "Administration",
+    "ADMIN_LOCAL": "Administrateur local",
+    "SUPER_ADMIN": "Administrateur central",
+    "structure.or.more": "{{ rest > 0 ? $head et $rest structure(s) : $head }}",
+    "adml.current.structure": "Administrateur local sur cette structure",
+    "quick.actions": "Actions rapides",
+    "structure": "Structure",
+    "imports.exports": "Imports / Exports",
+    "manage.connectors": "Gérer les connecteurs",
+    "manage.widgets": "Gérer les widgets",
+    "manage.applications": "Gérer les applications",
+    "export.accounts": "Exporter des comptes",
+    "import.users": "Importer des utilisateurs",
+    "massmail.accounts": "Publipostage des comptes",
+    "switch.old.admin.console": "Version classique",
+    "switch.old.admin.console.tooltip": "Quitter la version BETA et revenir à la version classique de la console d'administration",
+    "no.user.found": "Aucun utilisateur trouvé",
+    "users.quick.search.intro": "Tapez quelques lettres dans le champ ci-dessus pour trouver les utilisateurs (maximum 5) qui ont un nom ou un prénom correspondant"
 }
