--- a/admin/src/main/resources/i18n/fr.json
+++ b/admin/src/main/resources/i18n/fr.json
@@ -1,10 +1,11 @@
 {
     "admin.title": "Console d'administration",
-    "search.structure": "Rechercher une structure",
+    "search.structure": "Rechercher un établissement",
     "search.user": "Rechercher un utilisateur",
-    "pick.a.structure": "Choisir une structure",
+    "search.group": "Rechercher un groupe",
+    "pick.a.structure": "Choisir un établissement",
     "users.title": "Utilisateurs",
-    "structure.home.title": "Page de structure",
+    "structure.home.title": "Page de l'établissement",
     "Teacher": "Enseignant",
     "Student": "Elève",
     "Personnel": "Personnel",
@@ -65,10 +66,10 @@
     "administration": "Administration",
     "ADMIN_LOCAL": "Administrateur local",
     "SUPER_ADMIN": "Administrateur central",
-    "structure.or.more": "{{ rest > 0 ? $head et $rest structure(s) : $head }}",
-    "adml.current.structure": "Administrateur local sur cette structure",
+    "structure.or.more": "{{ rest > 0 ? $head et $rest établissement(s) : $head }}",
+    "adml.current.structure": "Administrateur local sur cette établissement",
     "quick.actions": "Actions rapides",
-    "structure": "Structure",
+    "structure": "Etablissement",
     "imports.exports": "Imports / Exports",
     "manage.connectors": "Gérer les connecteurs",
     "manage.widgets": "Gérer les widgets",
@@ -79,5 +80,16 @@
     "switch.old.admin.console": "Version classique",
     "switch.old.admin.console.tooltip": "Quitter la version BETA et revenir à la version classique de la console d'administration",
     "no.user.found": "Aucun utilisateur trouvé",
-    "users.quick.search.intro": "Tapez quelques lettres dans le champ ci-dessus pour trouver les utilisateurs (maximum 5) qui ont un nom ou un prénom correspondant"
+    "users.quick.search.intro": "Tapez quelques lettres dans le champ ci-dessus pour trouver les utilisateurs (maximum 5) qui ont un nom ou un prénom correspondant",
+    "user.root.error": "Erreur",
+    "user.root.error.text": "Une erreur est survenue durant votre dernière action.",
+    "reports": "Signalements",
+    "users": "Utilisateurs",
+    "groups": "Groupes",
+    "applications": "Applications",
+    "logout": "Déconnexion",
+    "manual.groups": "Groupes manuels",
+    "profile.groups": "Groupes de profil",
+    "functional.groups": "Groupes fonctionnels",
+    "members.of.group": "Membres du groupe"
 }
